--- a/{{cookiecutter.project_name}}/project.yml
+++ b/{{cookiecutter.project_name}}/project.yml
@@ -12,5 +12,5 @@ repo:
 install_mode: {{cookiecutter.install_mode}}
 requires:
 pip:
-    index_url:
+    index_urls:
         - {{cookiecutter.package_repo_url}}
